--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
 {
   "name": "global-error-handler",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "license": "MIT",
   "description": "This package is for handling error in any type of Javascript application in an aspect oriented way.",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "typings": "types/index.d.ts",
   "scripts": {
     "test": "jest",
     "lint": "eslint src -c .eslintrc.js --ext js --fix",
     "prettier": "prettier --config ./.prettierrc.js --ignore-path ./.prettierignore --write \"./**/*.{js,json}\"",
     "release": "npm publish",
-    "precommit": "npm run lint && npm run test"
+    "precommit": "npm run lint && npm run test",
+    "prepublishOnly": "babel ./src -d ./dist"
   },
   "devDependencies": {
     "@babel/core": "^7.8.7",
     "@babel/preset-env": "^7.8.7",
     "@babel/polyfill": "^7.8.7",
+    "@babel/cli": "^7.8.4",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-config-node": "^4.0.0",
